// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It matches the last accepted Snapshot 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
      "ciipUserBySub": Object {
        "firstName": "max",
        "id": "abc",
        "lastName": "powers",
      },
    }
  }
  title="Submission Certification"
>
  <SupportedBrowserNotice />
  <Relay(ApplicationDetailsComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "CertificationSignature_application": true,
        },
        "latestDraftRevision": Object {
          "certificationUrl": Object {
            " $fragmentRefs": Object {
              "ApplicationRecertificationContainer_certificationUrl": true,
            },
            "certificationSignature": "test",
            "hashMatches": true,
          },
        },
      }
    }
    liveValidate={false}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        "application": Object {
          " $fragmentRefs": Object {
            "ApplicationDetailsContainer_application": true,
            "CertificationSignature_application": true,
          },
          "latestDraftRevision": Object {
            "certificationUrl": Object {
              " $fragmentRefs": Object {
                "ApplicationRecertificationContainer_certificationUrl": true,
              },
              "certificationSignature": "test",
              "hashMatches": true,
            },
          },
        },
        "session": Object {
          " $fragmentRefs": Object {
            "defaultLayout_session": true,
          },
          "ciipUserBySub": Object {
            "firstName": "max",
            "id": "abc",
            "lastName": "powers",
          },
        },
      }
    }
    review={false}
  />
  <Relay(CertificationSignature)
    certificationIdsToSign={
      Array [
        undefined,
      ]
    }
  />
</Relay(DefaultLayout)>
`;

exports[`It renders ApplicationRecertificationContainer if hashMatches is false 1`] = `
<Relay(DefaultLayout)
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
      "ciipUserBySub": Object {
        "firstName": "max",
        "id": "abc",
        "lastName": "powers",
      },
    }
  }
  title="Submission Certification"
>
  <SupportedBrowserNotice />
  <Relay(ApplicationRecertification)
    certificationUrl={
      Object {
        " $fragmentRefs": Object {
          "ApplicationRecertificationContainer_certificationUrl": true,
        },
        "certificationSignature": "test",
        "hashMatches": false,
      }
    }
  />
</Relay(DefaultLayout)>
`;
